force-app/main/default/objects/bizible2__Bizible_ABTest__c/bizible2__Bizible_ABTest__c.object-meta.xml
<CustomObject>
    <label>Bizible ABTest</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bizible ABTests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>