force-app/main/default/objects/bizible2__Bizible_ABTest__c/fields/bizible2__Contact__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Bizible ABTests</relationshipLabel>
    <relationshipName>Bizible_ABTests</relationshipName>
    <type>Lookup</type>
</CustomField>