force-app/main/default/objects/bizible2__Bizible_ABTest__c/fields/bizible2__DateReported__c.field-meta.xml
<CustomField>
    <fullName>bizible2__DateReported__c</fullName>
    <label>Date Reported</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>