force-app/main/default/objects/bizible2__Bizible_ABTest__c/fields/bizible2__Experiment__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Experiment__c</fullName>
    <label>Experiment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>