force-app/main/default/objects/bizible2__Bizible_ABTest__c/fields/bizible2__Lead__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Bizible ABTests</relationshipLabel>
    <relationshipName>Bizible_ABTests</relationshipName>
    <type>Lookup</type>
</CustomField>