force-app/main/default/objects/bizible2__Bizible_ABTest__c/fields/bizible2__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Bizible ABTests</relationshipLabel>
    <relationshipName>Bizible_ABTests</relationshipName>
    <type>Lookup</type>
</CustomField>