force-app/main/default/objects/bizible2__Bizible_ABTest__c/fields/bizible2__Variation__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Variation__c</fullName>
    <label>Variation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>